Revert "Merge branch '35-site-management-restrictions' into feat-main-archeo-site-operations-"
This reverts commit abed40d686bc8bfbc1a264f024da4db5ad345195, reversing
changes made to 83e5793db262f169a3251eb699abe5c6c62f929d.