@@ -12,7 +12,6 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.*;
 import ro.ubb.abc2024.arheo.domain.artifact.Artifact;
-import ro.ubb.abc2024.arheo.domain.section.Section;
 import ro.ubb.abc2024.arheo.domain.section.SectionStatus;
 import ro.ubb.abc2024.arheo.domain.site.SiteStatus;
 import ro.ubb.abc2024.arheo.utils.converter.ArtifactDtoConverter;
@@ -47,9 +46,9 @@ public class SiteController {
     public Result<Map<String,Object>> getSites(@RequestParam(required = false) String status,
                                                    @RequestParam(required = false) Long archaeologistId,
                                                    @RequestParam(defaultValue = "0") int page,
-                                                   @RequestParam(defaultValue = "10") int pageSize) {
-        Pageable pageable = PageRequest.of(page, pageSize);
-        Page<Site> sitePage = siteService.getAllPaginatedByCriteria(status, pageable);
+                                                   @RequestParam(defaultValue = "10") int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Site> sitePage = siteService.getAllPaginatedByCriteria(status, archaeologistId, pageable);
         List<SiteDTO> siteDtoList = sitePage.getContent().stream().map(siteConverterDto::createFromEntity)
                 .collect(Collectors.toList());
         Map<String, Object> response = new HashMap<>();
@@ -87,22 +86,23 @@ public class SiteController {
         return new Result<>(true, HttpStatus.OK.value(), "Site deleted successfully.", Boolean.TRUE);
     }
 
-    @GetMapping("/sections")
+    @GetMapping("/sections/{id}")
     @PreAuthorize("hasAnyAuthority('SCOPE_ARH', 'SCOPE_ADMIN')")
-    public Result<Map<String, Object>> getSectionsBySite(@RequestParam Long siteId,
-                                                         @RequestParam(required = false) String sectionStatus,
-                                                         @RequestParam(defaultValue = "0") int page,
-                                                         @RequestParam(defaultValue = "10") int pageSize){
-        Pageable pageable = PageRequest.of(page, pageSize);
-        Page<Section> sectionPage = siteService.getPaginatedSectionsByCriteria(siteId, sectionStatus, pageable);
-        List<SectionDto> siteDtoList = sectionPage.getContent().stream().map(sectionDtoConverter::createFromEntity)
-                .collect(Collectors.toList());
-        Map<String, Object> response = new HashMap<>();
-        response.put("sites", siteDtoList);
-        response.put("currentPage", sectionPage.getNumber());
-        response.put("totalItems", sectionPage.getTotalElements());
-        response.put("totalPages", sectionPage.getTotalPages());
-        return new Result<>(true, HttpStatus.OK.value(), "Retrieved all sections", response);
+    public Result<List<SectionDto>> getSectionsById(@PathVariable long id){
+        return new Result<>(true, HttpStatus.OK.value(), "Returned all sections.", siteService.getSectionsBySiteId(id).stream().map(sectionDtoConverter::createFromEntity).toList());
+    }
+
+    @GetMapping("sections_incomplete/{id}")
+    @PreAuthorize("hasAnyAuthority('SCOPE_ARH', 'SCOPE_ADMIN')")
+    public Result<List<SectionDto>> getIncompleteSectionsBySiteId(@PathVariable long id){
+        return new Result<>(true,
+                HttpStatus.OK.value(),
+                "Returned incomplete sections.",
+                Stream.concat(
+                        siteService.getSectionsBySiteIdAndStatus(id, SectionStatus.DIGGING).stream().map(sectionDtoConverter::createFromEntity),
+                        siteService.getSectionsBySiteIdAndStatus(id, SectionStatus.ANALYSIS).stream().map(sectionDtoConverter::createFromEntity))
+                        .toList()
+        );
     }
 
     @GetMapping("/artifacts")
